@@ -2,14 +2,16 @@ package com.flare.spark.backend.bundles;
 
 import com.flare.spark.generated.api.model.BundleDto;
 import com.flare.spark.generated.api.model.CreateBundleDto;
-import java.util.stream.Collectors;
+
+import com.flare.spark.generated.api.model.PaginatedBundlesDto;
+import jakarta.validation.Valid;
+import org.springframework.data.domain.Slice;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
-
-import java.util.List;
 
 @RestController
 @RequestMapping("/api/v1/bundles")
@@ -24,21 +26,28 @@ public class BundleController {
     }
 
     @GetMapping
-    public List<BundleDto> getAllBundles() {
-        List<Bundle> bundles = bundleService.getAllBundles();
+    public PaginatedBundlesDto getAllBundles(
+        @RequestParam(required = false, defaultValue = "0", name = "page") int page
+    ) {
+        Slice<Bundle> bundles = bundleService.getAllBundles(page);
 
-        return bundles.stream()
-            .map(mapper::bundleToDto)
-            .collect(Collectors.toList());
+        return new PaginatedBundlesDto(
+            bundles.getContent().stream().map(mapper::bundleToDto).toList(),
+            bundles.getPageable().getPageNumber(),
+            bundles.getPageable().getPageSize(),
+            bundles.isFirst(),
+            bundles.isLast(),
+            bundles.isEmpty()
+        );
     }
 
     @PostMapping
     public BundleDto createBundle(
-        @RequestBody CreateBundleDto createBundleDto
+        @Valid @RequestBody CreateBundleDto createBundleDto
     ) {
-        Bundle createBundle = mapper.createBundleDtoToBundle(createBundleDto);
-        Bundle bundle = bundleService.createBundle(createBundle);
+        Bundle bundle = mapper.bundleDtoToBundle(createBundleDto);
+        Bundle savedBundle = bundleService.createBundle(bundle);
 
-        return mapper.bundleToDto(bundle);
+        return mapper.bundleToDto(savedBundle);
     }
 }
